fixed collapse issue

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -125,13 +125,13 @@ b, strong {
   position: fixed;
 
   .nav > li > a {
-    line-height: rem-calc(32px);
+    line-height: rem-calc(24px);
     z-index: 10;
   }
 
 
   .navbar-brand {
-    font-size: rem-calc(32px);
+    font-size: rem-calc(24px);
     font-weight: $bold;
     color: $primary-blue;
   }
